OK button in Save File dialog has no active state style
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox91 | --- | fixed |
People
(Reporter: joshas, Assigned: emilio)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:89.0) Gecko/20100101 Firefox/89.0
Steps to reproduce:
Download any file from internet, e.g. Firefox installer from https://www.mozilla.org/en-US/firefox/download/thanks/
Using Fedora 34 with GNOME, Wayland.
Actual results:
OK button in Safe File dialog has no active style when clicking and holding down mouse button. In attached screenshots I'm holding mouse button down on OK and Cancel buttons, notice the different active styles.
Expected results:
OK button should have same active styles as Cancel button and other buttons.
Could this issue be related to fact, that OK button is initially disabled for a few seconds after dialog window opens?
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
| Assignee | ||
Comment 2•4 years ago
|
||
This seems intentional since we implemented the active style (see this rule and this native code).
It seems we prioritize the default state over the pressed state, but it's not clear to me why... Perhaps we should just switch those conditions around and remove the :not([default]) bit. Martin?
| Assignee | ||
Comment 3•4 years ago
|
||
I'll send a patch, but maybe it's WONTFIX if the above is for a good reason :)
| Assignee | ||
Comment 4•4 years ago
|
||
Comment 5•4 years ago
|
||
I'd rather use the styles which may be less confusing for users.
Comment 7•4 years ago
|
||
| bugherder | ||
Description
•