Bug 1716515 - Let default buttons on GTK have proper hover/active/focus states. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D117888